--- a/task-3/style/style.css
+++ b/task-3/style/style.css
@@ -1,5 +1,12 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 10px 15px;
+  background-color: #faf4f2;
 }
 
 /* ---------------Header--------------- */
@@ -37,7 +44,6 @@ header li a {
 
 /* ---------------Activities Section--------------- */
 #activities {
-  background-color: #faf4f2;
   padding-top: 30px;
   padding-bottom: 20px;
 }
@@ -126,3 +132,59 @@ header li a {
   letter-spacing: 4px;
   cursor: pointer;
 }
+
+/* ---------------Contact Section--------------- */
+.contact {
+  background-color: rgb(244, 226, 220);
+  margin: 20px 10px;
+}
+
+.contact-left {
+  float: left;
+  background-image: url("../image/mask.png");
+  background-position: center;
+  background-size: cover;
+  width: 50%;
+  text-align: left;
+  padding-left: 70px;
+}
+
+.contact-right {
+  float: left;
+  width: 50%;
+}
+
+.contact-right h1 {
+  font-size: 40px;
+  color: rgba(121, 121, 121, 0.7);
+  margin: 30px 0 15px 0;
+  font-weight: bold;
+}
+.contact-right h3 {
+  font-size: 25px;
+  color: rgba(121, 121, 121, 0.7);
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.contact-right p {
+  padding: 10px 0;
+  color: rgba(121, 121, 121, 0.7);
+}
+
+.contact-dowload {
+  float: left;
+  width: 60%;
+}
+
+.contact-social {
+  float: left;
+}
+
+.contact-social i {
+  font-size: 30px;
+  color: rgb(207, 117, 91);
+  padding: 0 5px;
+}
+
+/* ---------------Footer--------------- */
