--- a/task-3/style/style.css
+++ b/task-3/style/style.css
@@ -12,22 +12,23 @@ body {
 /* ---------------Header--------------- */
 header {
   background-color: #f1e1db;
-  padding: 5px;
+  padding: 40px;
 }
 
 header .logo {
-  margin-left: 35px;
-  padding: 10px 0 0 0;
+  margin-bottom: 10px;
 }
 
 header li {
+  font-size: 30px;
   display: inline-block;
-  margin: 0 5px;
+  margin: 5px 5px;
   list-style: none;
 }
 
 header li a {
   color: black;
+  text-decoration: none;
 }
 
 /* ---------------Carousel--------------- */
@@ -89,6 +90,7 @@ header li a {
 
 .img_block {
   position: relative;
+  margin-bottom: 10px;
 }
 
 .img_block i {
@@ -114,6 +116,7 @@ header li a {
   letter-spacing: 2;
   border-radius: 10px;
   font-weight: bold;
+  margin: 20px 0;
 }
 
 .view-all {
@@ -131,6 +134,11 @@ header li a {
   border-radius: 50px;
   letter-spacing: 4px;
   cursor: pointer;
+}
+
+.activities_text h3,
+p {
+  line-height: 1.5;
 }
 
 /* ---------------Contact Section--------------- */
@@ -188,3 +196,44 @@ header li a {
 }
 
 /* ---------------Footer--------------- */
+footer {
+  background-color: rgb(244, 226, 220);
+  margin-top: 50px;
+  padding: 70px 40px;
+  border-top-right-radius: 50px;
+  border-top-left-radius: 50px;
+}
+
+.info-big {
+  float: left;
+  width: 40%;
+}
+
+.info-small {
+  float: left;
+  width: 20%;
+}
+
+.info-small li {
+  list-style: none;
+}
+
+footer h3 {
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+
+footer p {
+  margin: 20px 0;
+  line-height: 1.5;
+}
+
+footer li {
+  line-height: 2;
+}
+
+.copy-right {
+  text-align: center;
+  margin-top: 30px;
+  font-weight: 300;
+}
