--- a/task-4/style.css
+++ b/task-4/style.css
@@ -49,7 +49,7 @@ header {
 section {
   width: 100%;
   margin: 2rem 0;
-  padding: 0 2rem;
+  padding: 0 4rem;
 }
 /*
 =============== 
@@ -150,10 +150,45 @@ About
 
 /*
 =============== 
-info
+Info
 ===============
 */
-.info{
-    background-color: var(--clr-primary-2);
-    height: 10vh;
+.info {
+  background-color: var(--clr-primary-2);
+  padding: 2rem 4rem;
+}
+
+.info__item {
+  display: table;
+  float: left;
+  width: 25%;
+}
+
+.info__text {
+  color: black;
+
+  line-height: 1rem;
+  text-transform: uppercase;
+}
+
+.info__number {
+  font-size: 4rem;
+  font-weight: bold;
+  padding-right: 0.5rem;
+  text-align: right;
+}
+
+.info__number,
+.info__text {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+/*
+=============== 
+Categories
+===============
+*/
+.categories {
+  height: 50vh;
 }
