--- a/task-6-Samar/sass/abstracts/_variables.scss
+++ b/task-6-Samar/sass/abstracts/_variables.scss
@@ -16,4 +16,5 @@ $color-rgba-primary-7: rgba(245, 95, 141, 0.7);
 $color-rgba-primary-8: rgba(245, 95, 141, 0.8);
 $color-rgba-primary-9: rgba(245, 95, 141, 0.9);
 
-$transition: all 0.5s
+$transition: all 0.5s;
+$radius: 1rem;
