--- a/task-6-Samar/sass/base/_typography.scss
+++ b/task-6-Samar/sass/base/_typography.scss
@@ -31,12 +31,21 @@ h1 {
   color: black;
   font-size: 7rem;
   font-weight: 700;
+  text-transform: uppercase;
+}
+
+h4 {
+  color: black;
+  font-size: 2.1rem;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 h6 {
   color: #f55f8d;
   font-size: 2.2rem;
   font-weight: 500;
+  text-transform: uppercase;
 }
 
 p {
