--- a/task-6-Samar/sass/layout/_layout.scss
+++ b/task-6-Samar/sass/layout/_layout.scss
@@ -62,3 +62,40 @@
     }
   }
 }
+
+// ====================SERVICE====================
+.service {
+  background-image: url("../../images/bg16.png");
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  h1 {
+    margin-bottom: 4rem;
+  }
+
+  &__content {
+    width: 70%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  &__item {
+    background-color: white;
+    width: 33.333333%;
+    flex: 0 0 auto;
+    border-radius: $radius;
+    margin: 0 2rem;
+    padding: 1rem 2rem;
+    box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.1);
+    img {
+      width: 60%;
+      margin: 2rem;
+    }
+  }
+}
