--- a/task-6-Samar/sass/base/_typography.scss
+++ b/task-6-Samar/sass/base/_typography.scss
@@ -6,6 +6,7 @@ h5,
 h6 {
   margin-bottom: 2rem;
   line-height: 1.1;
+  letter-spacing: 1.5;
 }
 
 p {
@@ -32,6 +33,7 @@ h1 {
   font-size: 7rem;
   font-weight: 700;
   text-transform: uppercase;
+  letter-spacing: 1.5;
 }
 
 h4 {
@@ -48,6 +50,7 @@ h6 {
   text-transform: uppercase;
 }
 
-p {
+p, li {
   font-size: 1.8rem;
 }
+
