--- a/task-6-Samar/sass/components/_links.scss
+++ b/task-6-Samar/sass/components/_links.scss
@@ -15,3 +15,32 @@
   background-image: $color-gradient;
   background-size: 200%;
 }
+
+.links-secondary::before {
+  content: "\f00c";
+  font-family: "Line Awesome Free";
+  font-size: 24px;
+  width: 35px;
+  height: 35px;
+  background: #000;
+  text-align: center;
+  line-height: 35px;
+  color: $color-primary;
+  border-radius: 35px;
+  font-weight: 900;
+  border: 2px solid $color-primary;
+  background-color: transparent;
+  background-size: 200%;
+
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+ul[class*="list-"] li::before {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
