--- a/task-6-Samar/sass/layout/_layout.scss
+++ b/task-6-Samar/sass/layout/_layout.scss
@@ -1,4 +1,9 @@
 // ====================HEADER====================
+#header {
+  position: fixed;
+  width: 100vw;
+  z-index: 100;
+}
 .header {
   width: 90%;
   margin: 0 auto;
@@ -7,7 +12,6 @@
   justify-content: space-between;
   align-items: center;
   background-color: transparent;
-  position: absolute;
 
   &__links {
     display: flex;
@@ -96,6 +100,51 @@
     img {
       width: 60%;
       margin: 2rem;
+    }
+  }
+}
+
+// ====================ABOUT====================
+.about {
+  background-image: url("../../images/bg15.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  padding-left: 0;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 8.5rem;
+
+  &__image {
+    width: 45%;
+    height: 100%;
+    position: relative;
+    img {
+      width: 100%;
+      height: 100%;
+      border-top-right-radius: 10rem;
+      border-bottom-right-radius: 10rem;
+    }
+
+    &::before {
+      position: absolute;
+      content: "";
+      height: 100%;
+      width: 50vw;
+      display: block;
+      z-index: -1;
+      right: -20px;
+      transform: rotate(8deg);
+      border-radius: 0 100px 100px 0;
+      background-color: #fef2f6;
+    }
+  }
+  &__content {
+    width: 50%;
+    li {
+      position: relative;
+      padding: 0.8rem 0.5rem 0.8rem 4rem;
     }
   }
 }
