--- a/task-6-Samar/sass/layout/_layout.scss
+++ b/task-6-Samar/sass/layout/_layout.scss
@@ -200,7 +200,6 @@
     margin-right: 2rem;
   }
   &__box {
-
     display: flex;
     padding: 1rem;
     padding-left: 0;
@@ -212,12 +211,12 @@
     align-items: center;
     box-shadow: 0.5rem 0.5rem 0.5rem 0.5rem rgb(194, 185, 185);
 
-    h3{
+    h3 {
       font-size: 2.5rem;
       color: black;
     }
 
-    &--right{
+    &--right {
       transform: translateX(7rem);
     }
   }
@@ -238,6 +237,48 @@
       width: 100%;
       height: 100%;
       object-fit: contain;
+    }
+  }
+}
+
+// ====================Portfolio====================
+.portfolio {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  &__image {
+    width: 90%;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 3rem;
+    grid-template-columns: repeat(7, 1fr);
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: $radius;
+    }
+
+    &--1 {
+      grid-column: 1 / span 4;
+    }
+    &--2 {
+      grid-column: 5 / span 3;
+    }
+    &--3 {
+      grid-column: 1 / span 2;
+    }
+    &--4 {
+      grid-column: 3 / span 2;
+    }
+    &--5 {
+      grid-column: 1 / span 4;
+    }
+    &--6 {
+      grid-column: 5 / span 3;
+      grid-row: 2 / span 2;
     }
   }
 }
