--- a/task-6-Samar/sass/base/_typography.scss
+++ b/task-6-Samar/sass/base/_typography.scss
@@ -47,10 +47,10 @@ h6 {
   color: #f55f8d;
   font-size: 2.2rem;
   font-weight: 500;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
-p, li {
+p,
+li {
   font-size: 1.8rem;
 }
-
