--- a/task-6-Samar/sass/components/_links.scss
+++ b/task-6-Samar/sass/components/_links.scss
@@ -38,6 +38,24 @@
   transform: translateY(-50%);
 }
 
+.links-tertiary::before {
+  content: "\f00c";
+  font-family: "Line Awesome Free";
+  font-size: 24px;
+  padding: 0.5rem;
+  margin-right: 1rem;
+  width: 35px;
+  height: 35px;
+  background: #000;
+  text-align: center;
+  line-height: 35px;
+  color: $color-primary;
+  border-radius: 35px;
+  font-weight: 900;
+  background-color: #feeff3;
+  background-size: 200%;
+}
+
 ul[class*="list-"] li::before {
   position: absolute;
   left: 0;
