--- a/task-6-Samar/sass/layout/_layout.scss
+++ b/task-6-Samar/sass/layout/_layout.scss
@@ -342,3 +342,57 @@
     }
   }
 }
+
+// ====================Blog====================
+.blog {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  hr {
+    width: 90%;
+    color: #f0f0f7;
+    margin: 2rem auto;
+  }
+
+  &__title {
+    text-align: center;
+  }
+
+  &__content {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  &__item {
+    width: 30%;
+    background-color: #feeff3;
+    border-radius: 0.5rem;
+    button {
+      font-size: 2rem;
+
+      border-radius: 0.5rem;
+      padding: 1rem;
+      margin-bottom: 1rem;
+      position: relative;
+      transform: translate(3rem, -5rem);
+    }
+    h3 {
+      font-size: 3rem;
+      color: black;
+    }
+  }
+
+  &__details {
+    margin-top: -7rem;
+    padding: 3rem;
+  }
+
+  &__info {
+    font-size: 2.5rem;
+    span {
+      color: $color-primary;
+    }
+  }
+}
