--- a/task-6-Samar/css/style.css
+++ b/task-6-Samar/css/style.css
@@ -98,6 +98,39 @@ li {
   font-size: 1.8rem;
 }
 
+@keyframes rotation {
+  0% {
+    transform: rotate(-3deg) scale(1.5);
+  }
+  50% {
+    transform: rotate(3deg) scale(1.5);
+  }
+  100% {
+    transform: rotate(-3deg) scale(1.5);
+  }
+}
+@keyframes rotation1 {
+  0% {
+    transform: rotate(-3deg);
+  }
+  50% {
+    transform: rotate(3deg);
+  }
+  100% {
+    transform: rotate(-3deg);
+  }
+}
+@keyframes linkHover {
+  0% {
+    transform: translateY(1rem);
+  }
+  40% {
+    transform: translateY(-1rem) scale(0);
+  }
+  100% {
+    transform: translateY(0rem);
+  }
+}
 #header {
   position: fixed;
   width: 100vw;
@@ -120,6 +153,13 @@ li {
   display: flex;
   justify-content: space-evenly;
   flex-basis: 70%;
+  transition-delay: 3s;
+}
+.header__links li:hover {
+  animation: linkHover 0.5s linear;
+}
+.header__links li:hover a {
+  color: #f55f8d;
 }
 .header__links ul {
   display: flex;
@@ -167,7 +207,7 @@ li {
   position: absolute;
   z-index: 2;
   top: 25%;
-  transform: scale(1.5);
+  animation: rotation 10s infinite linear;
 }
 
 .service {
@@ -185,7 +225,7 @@ li {
   margin-bottom: 4rem;
 }
 .service__content {
-  width: 70%;
+  width: 80%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -195,13 +235,17 @@ li {
   width: 33.333333%;
   flex: 0 0 auto;
   border-radius: 1rem;
-  margin: 0 2rem;
-  padding: 1rem 2rem;
+  margin: 2rem 2rem;
+  padding: 3rem 2rem;
   box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.1);
+  transition: all 1s linear;
 }
 .service__item img {
-  width: 60%;
+  width: 70%;
   margin: 2rem;
+}
+.service__item:hover {
+  transform: translateY(-3rem);
 }
 
 .about {
@@ -295,12 +339,35 @@ li {
   display: flex;
   padding: 1rem;
   padding-left: 0;
+  position: relative;
   margin-bottom: 3rem;
   background-color: white;
   border-radius: 1rem;
   width: 80%;
   align-items: center;
   box-shadow: 0.5rem 0.5rem 0.5rem 0.5rem #c2b9b9;
+  cursor: pointer;
+  transform: translateY(0);
+  transition: all 2s;
+}
+.story__box:hover p, .story__box:hover h3, .story__box:hover i {
+  color: white;
+}
+.story__box::after {
+  content: "";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+  background-size: 200%;
+  transition: all 2s;
+  z-index: -1;
+}
+.story__box:hover::after {
+  opacity: 1;
 }
 .story__box h3 {
   font-size: 2.5rem;
@@ -321,6 +388,7 @@ li {
   width: 50%;
 }
 .story__right img {
+  animation: rotation1 10s infinite linear;
   width: 100%;
   height: 100%;
   object-fit: contain;
