--- a/task-6-Samar/sass/layout/_layout.scss
+++ b/task-6-Samar/sass/layout/_layout.scss
@@ -20,6 +20,15 @@
     display: flex;
     justify-content: space-evenly;
     flex-basis: 70%;
+    transition-delay: 3s;
+
+    li:hover {
+      animation: linkHover 0.5s linear;
+    }
+    li:hover a {
+      color: $color-primary;
+    }
+
     ul {
       display: flex;
       flex-basis: 70%;
@@ -71,7 +80,8 @@
       position: absolute;
       z-index: 2;
       top: 25%;
-      transform: scale(1.5);
+
+      animation: rotation 10s infinite linear;
     }
   }
 }
@@ -92,7 +102,7 @@
   }
 
   &__content {
-    width: 70%;
+    width: 80%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -103,12 +113,16 @@
     width: 33.333333%;
     flex: 0 0 auto;
     border-radius: $radius;
-    margin: 0 2rem;
-    padding: 1rem 2rem;
+    margin: 2rem 2rem;
+    padding: 3rem 2rem;
     box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.1);
     img {
-      width: 60%;
+      width: 70%;
       margin: 2rem;
+    }
+    transition: all 1s linear;
+    &:hover {
+      transform: translateY(-3rem);
     }
   }
 }
@@ -212,13 +226,39 @@
     display: flex;
     padding: 1rem;
     padding-left: 0;
-
+    position: relative;
     margin-bottom: 3rem;
     background-color: white;
     border-radius: $radius;
     width: 80%;
     align-items: center;
     box-shadow: 0.5rem 0.5rem 0.5rem 0.5rem rgb(194, 185, 185);
+    cursor: pointer;
+    transform: translateY(0);
+    transition: all 2s;
+
+    &:hover p,
+    &:hover h3,
+    &:hover i {
+      color: white;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: $color-gradient;
+      background-size: 200%;
+      transition: all 2s;
+      z-index: -1;
+    }
+    &:hover::after {
+      opacity: 1;
+    }
 
     h3 {
       font-size: 2.5rem;
@@ -241,8 +281,8 @@
 
   &__right {
     width: 50%;
-
     img {
+      animation: rotation1 10s infinite linear;
       width: 100%;
       height: 100%;
       object-fit: contain;
