--- a/task-8-imroz/css/style.css
+++ b/task-8-imroz/css/style.css
@@ -25,7 +25,7 @@ h6 {
 }
 
 section {
-  padding: 10rem 5rem;
+  padding: 10rem 10rem;
 }
 
 img {
@@ -183,6 +183,18 @@ header i.fas {
   align-items: center;
   grid-gap: 5rem;
 }
+@media screen and (max-width: 1200px) {
+  .service__content {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 3rem;
+  }
+}
+@media screen and (max-width: 700px) {
+  .service__content {
+    grid-template-columns: repeat(1, 80%);
+    grid-gap: 2rem;
+  }
+}
 .service__card {
   background-color: #f6f6f6;
   display: flex;
@@ -229,6 +241,19 @@ header i.fas {
   box-shadow: 0px 2px 70px 0px rgba(253, 71, 102, 0.05);
 }
 
+.project {
+  background-image: url("../../images/bg-image-3.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  text-align: center;
+}
+.project__content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 5rem;
+}
+
 .header-btn {
   border: 2px solid rgba(255, 255, 255, 0.2);
   color: white;
@@ -272,6 +297,105 @@ header i.fas {
   z-index: 1;
   background: rgba(39, 43, 54, 0.05);
   background-size: cover;
+}
+
+.card {
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
+  border-radius: 10px;
+  transition: transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1), 0px 2px 70px 0px rgba(253, 71, 102, 0.05) 0.65s cubic-bezier(0.05, 0.2, 0.1, 1);
+}
+.card::before {
+  position: absolute;
+  opacity: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 85%;
+  display: block;
+  z-index: 1;
+  content: "";
+  background: linear-gradient(to bottom, rgba(15, 15, 15, 0), rgba(15, 15, 15, 0.75) 100%);
+  transition: opacity 0.65s cubic-bezier(0.05, 0.2, 0.1, 1);
+  cursor: pointer;
+}
+.card::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 85%;
+  display: block;
+  z-index: 1;
+  content: "";
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #fd4766 100%);
+  transition: all 0.65s cubic-bezier(0.05, 0.2, 0.1, 1);
+  cursor: pointer;
+  opacity: 0;
+}
+.card:hover::before {
+  opacity: 1;
+}
+.card:hover::after {
+  opacity: 1;
+}
+.card__thumbnail {
+  width: 100%;
+  height: 100%;
+}
+.card__thumbnail img {
+  width: 100%;
+  height: 100%;
+  transition: transform 1s ease, opacity 0.5s ease 0.25s;
+  object-fit: cover;
+}
+.card:hover img {
+  transform: scale(1.1);
+}
+.card__content {
+  position: absolute;
+  z-index: 2;
+  width: 90%;
+  top: 80%;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all 1s ease, opacity 0.5s ease 0.25s;
+}
+.card__content p {
+  color: #ffffff;
+  opacity: 0.7;
+  display: inline-block;
+  margin: 5px;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 0.5px;
+}
+.card__content h4 {
+  color: white;
+  font-size: 3rem;
+}
+.card__content-slideUp {
+  position: absolute;
+  z-index: 3;
+  width: 90%;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: all 1s ease, opacity 0.5s ease 0.25s;
+}
+.card__content-slideUp p {
+  color: white;
+  color: #ffffff;
+  opacity: 0.7;
+}
+.card:hover .card__content-slideUp {
+  top: 85%;
+  opacity: 1;
+}
+.card:hover .card__content {
+  top: 70%;
 }
 
 /*# sourceMappingURL=style.css.map */
