--- a/task-8-imroz/sass/abstracts/_variables.scss
+++ b/task-8-imroz/sass/abstracts/_variables.scss
@@ -65,3 +65,6 @@ $line-height-b3: 1.6;
 $line-height-b4: 1.3;
 
 $box-shadow: 0px 2px 70px 0px rgba(253, 71, 102, 0.05);
+
+$breakpoint-tab: 1200px;
+$breakpoint-mobile: 700px;
