--- a/task-8-imroz/sass/main.scss
+++ b/task-8-imroz/sass/main.scss
@@ -5,9 +5,9 @@
 @import "base/typography";
 @import "base/utillities";
 
-
 @import "layout/layout";
 
 @import "components/button";
 @import "components/links";
 @import "components/overlay";
+@import "components/card";
