--- a/task-8-imroz/css/style.css
+++ b/task-8-imroz/css/style.css
@@ -11,6 +11,16 @@ html {
   font-family: "Roboto", sans-serif;
 }
 
+@media only screen and (max-width: 1200px) {
+  html {
+    font-size: 55%;
+  }
+}
+@media only screen and (max-width: 700px) {
+  html {
+    font-size: 50%;
+  }
+}
 body {
   overflow-x: hidden;
 }
@@ -253,6 +263,18 @@ header i.fas {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 5rem;
 }
+@media screen and (max-width: 1200px) {
+  .project__content {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+  }
+}
+@media screen and (max-width: 700px) {
+  .project__content {
+    grid-gap: 2rem;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
 
 .header-btn {
   border: 2px solid rgba(255, 255, 255, 0.2);
@@ -357,7 +379,7 @@ header i.fas {
   position: absolute;
   z-index: 2;
   width: 90%;
-  top: 80%;
+  top: 65%;
   left: 50%;
   transform: translateX(-50%);
   transition: all 1s ease, opacity 0.5s ease 0.25s;
@@ -366,8 +388,8 @@ header i.fas {
   color: #ffffff;
   opacity: 0.7;
   display: inline-block;
-  margin: 5px;
-  font-size: 16px;
+  margin: 0.5rem;
+  font-size: 1.6rem;
   font-weight: 300;
   letter-spacing: 0.5px;
 }
@@ -391,11 +413,16 @@ header i.fas {
   opacity: 0.7;
 }
 .card:hover .card__content-slideUp {
-  top: 85%;
+  top: 80%;
   opacity: 1;
 }
 .card:hover .card__content {
-  top: 70%;
+  top: 65%;
+}
+@media screen and (max-width: 1200px) {
+  .card:hover .card__content {
+    top: 55%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
