--- a/task-8-imroz/sass/components/_card.scss
+++ b/task-8-imroz/sass/components/_card.scss
@@ -72,7 +72,7 @@
     position: absolute;
     z-index: 2;
     width: 90%;
-    top: 80%;
+    top: 65%;
     left: 50%;
     transform: translateX(-50%);
     transition: all 1s ease, opacity 0.5s ease 0.25s;
@@ -80,11 +80,12 @@
       color: #ffffff;
       opacity: 0.7;
       display: inline-block;
-      margin: 5px;
-      font-size: 16px;
+      margin: 0.5rem;
+      font-size: 1.6rem;
       font-weight: 300;
       letter-spacing: 0.5px;
     }
+
     h4 {
       color: white;
       font-size: 3rem;
@@ -106,11 +107,16 @@
     transition: all 1s ease, opacity 0.5s ease 0.25s;
   }
   &:hover &__content-slideUp {
-    top: 85%;
+    top: 80%;
     opacity: 1;
   }
 
   &:hover &__content {
-    top: 70%;
+    top: 65%;
+    @media screen and (max-width: $breakpoint-tab) {
+      & {
+        top: 55%;
+      }
+    }
   }
 }
