--- a/task-8-imroz/css/style.css
+++ b/task-8-imroz/css/style.css
@@ -77,11 +77,11 @@ h4 {
 }
 
 p.description {
-  font-size: 2.4rem;
+  color: rgba(29, 29, 36, 0.75);
+  font-size: 2rem;
   line-height: 40px;
   margin: 0;
-  padding: 0 16%;
-  font-weight: 300;
+  font-weight: 100;
 }
 
 a {
@@ -126,6 +126,10 @@ header li {
 }
 header li a {
   color: white !important;
+  transition: all 1s;
+}
+header li a:hover {
+  color: #fd4766 !important;
 }
 header button.navbar-toggler {
   border: none;
@@ -276,6 +280,53 @@ header i.fas {
   }
 }
 
+.about {
+  padding: 10rem 10rem;
+}
+@media screen and (max-width: 700px) {
+  .about .row {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 2rem;
+  }
+}
+.about__image img {
+  border-radius: 10px;
+}
+.about__content .nav-tabs {
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid #e6e6e6;
+  border-radius: 50em;
+}
+.about i {
+  color: #fd4766;
+}
+.about__nav .nav-pills {
+  margin: 2rem auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  background-color: transparent;
+  border: 1px solid rgba(29, 29, 36, 0.75);
+  border-radius: 5rem;
+}
+.about__nav .nav-item {
+  background-color: transparent;
+}
+.about__nav .nav-item a {
+  padding: 1rem 2rem;
+  font-size: 2rem;
+  color: black;
+  font-weight: 300;
+}
+.about__nav .nav-item .nav-link.active {
+  background-color: #fd4766;
+  padding: 1rem 2rem;
+  border-radius: 5rem;
+}
+
 .header-btn {
   border: 2px solid rgba(255, 255, 255, 0.2);
   color: white;
@@ -295,16 +346,17 @@ header i.fas {
   color: white;
   font-size: 1.9rem;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   padding: 1.6rem 4rem;
   border-radius: 500px;
   display: inline-block;
-  font-weight: 500;
+  font-weight: 400;
   transition: all 0.4s ease-in-out;
   background: #fd4766;
   border: 2px solid #fd4766;
   transition: all 0.4s ease-in-out;
   text-decoration: none;
+  margin-top: 3rem;
 }
 .default-btn:hover {
   background: transparent;
