--- a/task-8-imroz/sass/base/_typography.scss
+++ b/task-8-imroz/sass/base/_typography.scss
@@ -27,11 +27,11 @@ h4 {
 }
 
 p.description {
-  font-size: 2.4rem;
+  color: $color-gray;
+  font-size: 2rem;
   line-height: 40px;
   margin: 0;
-  padding: 0 16%;
-  font-weight: 300;
+  font-weight: 100;
 }
 
 a {
