--- a/task-8-imroz/sass/components/_button.scss
+++ b/task-8-imroz/sass/components/_button.scss
@@ -18,16 +18,17 @@
   color: white;
   font-size: 1.9rem;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   padding: 1.6rem 4rem;
   border-radius: 500px;
   display: inline-block;
-  font-weight: 500;
+  font-weight: 400;
   transition: all 0.4s ease-in-out;
   background: $color-primary;
   border: 2px solid $color-primary;
   transition: all 0.4s ease-in-out;
   text-decoration: none;
+  margin-top: 3rem;
 
   &:hover {
     background: transparent;
