--- a/task-8-imroz/sass/layout/_layout.scss
+++ b/task-8-imroz/sass/layout/_layout.scss
@@ -199,14 +199,7 @@ header {
 //  =========== Project ===========
 .about {
   padding: 10rem 10rem;
-  @media screen and (max-width: $breakpoint-mobile) {
-    .row {
-      display: grid;
-      grid-template-rows: repeat(2, 1fr);
-      grid-template-columns: repeat(1, 1fr);
-      grid-gap: 2rem;
-    }
-  }
+
   &__image {
     img {
       border-radius: 10px;
@@ -253,5 +246,81 @@ header {
         border-radius: 5rem;
       }
     }
+  }
+}
+
+//  =========== Testimonial ===========
+.testimonial {
+  background-color: #f9f9f9;
+  position: relative;
+  padding: 10rem;
+
+  p::before {
+    position: absolute;
+    width: 177px;
+    height: 100%;
+    left: -64px;
+    top: -57px;
+    background-image: url("../../images/image-1.png");
+    content: "";
+    opacity: 1;
+    background-repeat: no-repeat;
+    z-index: -1;
+  }
+
+  p {
+    font-size: 3rem;
+    line-height: 4.8rem;
+    color: #18181b;
+    font-weight: 500;
+    margin-bottom: 0;
+    margin-top: -1.6rem;
+    position: relative;
+    z-index: 2;
+  }
+
+  h6 {
+    font-size: 1.8rem;
+    line-height: 5rem;
+    color: #8c8c8c;
+    font-weight: 300;
+    margin-bottom: 0;
+    span {
+      color: $color-primary;
+      font-weight: 500;
+    }
+  }
+
+  &__profile {
+    margin: 1rem 0;
+    img {
+      border-radius: 10px;
+    }
+  }
+
+  .nav-item {
+    padding: 0 !important;
+    img {
+      transform: scale(0.9);
+      filter: grayscale(0.6);
+      transition: all 1s;
+    }
+  }
+
+  .nav-link:hover {
+    border: none !important;
+  }
+
+  .nav-item .active {
+    border: none !important;
+    background-color: transparent !important;
+    img {
+      transform: scale(1.1);
+      filter: grayscale(0);
+    }
+  }
+
+  .nav-tabs{
+    border: none !important;
   }
 }
