--- a/task-8-imroz/sass/layout/_layout.scss
+++ b/task-8-imroz/sass/layout/_layout.scss
@@ -35,6 +35,7 @@ header {
 //  =========== Carousel  ===========
 .carousel {
   width: 100vw;
+  padding: 0 !important;
 
   img {
     position: relative;
@@ -355,4 +356,33 @@ header {
   }
 }
 
-//  =========== New ===========
+//  =========== Client ===========
+.client {
+  text-align: center;
+  background-color: #f9f9f9;
+  &__content {
+    margin-top: 5rem;
+  }
+
+  &__item {
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 0.5s;
+
+    &:hover {
+      background-color: $color-primary;
+      transform: scale(1.1);
+    }
+  }
+
+  img {
+    position: relative;
+    top: 50%;
+    width: 60%;
+    height: 60%;
+    padding: auto 0;
+    object-fit: contain;
+    transform: translateY(-50%);
+  }
+}
