add back-to-top component

--- a/task-8-imroz/sass/layout/_layout.scss
+++ b/task-8-imroz/sass/layout/_layout.scss
@@ -386,3 +386,8 @@ header {
     transform: translateY(-50%);
   }
 }
+
+//  =========== Footer ===========
+.footer {
+  background-color: #010001;
+}
