--- a/task-8-imroz/sass/main.scss
+++ b/task-8-imroz/sass/main.scss
@@ -11,5 +11,6 @@
 @import "components/links";
 @import "components/overlay";
 @import "components/card";
+@import "components/backToTop";
 
 @import "utils/border";
